--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ fonttools==4.53.0
 ipykernel==6.29.4
 ipython==8.25.0
 jedi==0.19.1
+joblib==1.4.2
 jupyter_client==8.6.2
 jupyter_core==5.7.2
 kiwisolver==1.4.5
@@ -39,6 +40,7 @@ seaborn==0.13.2
 six==1.16.0
 stack-data==0.6.3
 statsmodels==0.14.2
+threadpoolctl==3.5.0
 tornado==6.4.1
 traitlets==5.14.3
 typing_extensions==4.12.2
